tests/react_modules/react_modules.exp
Error: createclass-callsite.js:7
                  v
  7:   propTypes: {
  8:     name: React.PropTypes.string.isRequired,
  9:   },
       ^ property `name`. Property not found in
 21:         <HelloLocal />
             ^^^^^^^^^^^^^^ props of React element `HelloLocal`

Error: createclass-callsite.js:20
 20:         <Hello />
             ^^^^^^^^^ React element `Hello`
                  v
  6:   propTypes: {
  7:     name: React.PropTypes.string.isRequired,
  8:   },
       ^ property `name`. Property not found in. See: createclass-module.js:6
 20:         <Hello />
             ^^^^^^^^^ props of React element `Hello`

Error: es6class-proptypes-callsite.js:20
 20:         <Hello />
             ^^^^^^^^^ React element `Hello`
  5: class Hello extends React.Component<void, {name: string}, void> {
                                               ^^^^^^^^^^^^^^ property `name`. Property not found in. See: es6class-proptypes-module.js:5
 20:         <Hello />
             ^^^^^^^^^ props of React element `Hello`

Error: es6class-proptypes-callsite.js:21
 21:         <HelloLocal />
             ^^^^^^^^^^^^^^ React element `HelloLocal`
  6: class HelloLocal extends React.Component<void, {name: string}, void> {
                                                    ^^^^^^^^^^^^^^ property `name`. Property not found in
 21:         <HelloLocal />
             ^^^^^^^^^^^^^^ props of React element `HelloLocal`

Error: es6class-types-callsite.js:20
 20:         <Hello />
             ^^^^^^^^^ React element `Hello`
  7: class Hello extends React.Component<{}, Props, void>{
                                             ^^^^^ property `name`. Property not found in. See: es6class-types-module.js:7
 20:         <Hello />
             ^^^^^^^^^ props of React element `Hello`

Error: es6class-types-callsite.js:21
 21:         <HelloLocal />
             ^^^^^^^^^^^^^^ React element `HelloLocal`
  8: class HelloLocal extends React.Component<void, Props, void> {
                                                    ^^^^^ property `name`. Property not found in
 21:         <HelloLocal />
             ^^^^^^^^^^^^^^ props of React element `HelloLocal`


Found 6 errors
